# upmem-swap

./: .gitignore  ARCHITECTURE.md  ARTICLE_4PAGES.md  ARTICLE_GUIDE.md  AWS_DEPLOYMENT.md  AWS_STEP_BY_STEP.md  CMakeLists.txt  LARGE_SCALE_TEST_100K.md  LICENSE  MULTI_DPU_ANALYSIS.md  Makefile  Makefilemake  OPTIMIZATIONS.md  PARALLEL_BENCHMARK_TODO.md  PARALLEL_LATENCY_IMPLEMENTED.md  README.md  README_BUILD.md  README_FIGURES.md  REAL_VS_SIMULATOR.md  RESULTS.md  SIMULATOR_DELIVERY.md  SIMULATOR_EVOLUTION.md  WHAT_WAS_DONE.md  analysis_report.txt  compare_sim_vs_real.sh  dump_simulator.sh  quick_install.sh  stress_ram.sh  swap_backends_compare.c  test_real_swap.c
cmake/: UPMEMSwapConfig.cmake.in
scripts/: deep_analysis.py  diagnose_parallelism.py  generate_4page_article.py  generate_article_images.py  generate_clean_figures.py  generate_final_article_figures.py  generate_final_figures.py  generate_realistic_figures.py  large_scale_visualization.py  visualize_parallelism_breakthrough.py  visualize_results.py
simulator/: ARCHITECTURE.md  BATCH_OPERATIONS.md  HARDWARE_DEPLOYMENT.md  INTEGRATION.md  LATENCY_MODEL.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_SCIENTIFIC.md  VALIDATION_RESULTS.md  analyze_results.py  benchmark_batch  benchmark_batch_improved  package.sh  plot_compression.py  run_validation.sh  swap_sim  test_parallel_model
simulator/dpu/: dpu_program.c
simulator/ebpf/: ebpf_handler.c  ebpf_handler.h  ebpf_pagefault.c
simulator/results/: 01_legend.txt  02_legend.txt  03_legend.txt  04_legend.txt  05_legend.txt  06_legend.txt  16dpu.csv  1dpu.csv  4dpu.csv  8dpu.csv  Figure1_Legend.txt  Figure2_Legend.txt  Figure3_Legend.txt  INDEX.md  benchmark_batch.csv  benchmark_batch_improved.csv  mixed.csv  pressure_16mb.csv  pressure_2mb.csv  pressure_8mb.csv  random.csv  scaling_1dpu.csv  scaling_2dpu.csv  scaling_4dpu.csv  scaling_8dpu.csv  sequential.csv  swap_sim.csv
simulator/scripts/: analyze_best_batch.py  visualize_batch.py  visualize_batch_final.py  visualize_combined.py  visualize_comparison.py  visualize_publication.py
simulator/src/: benchmark_batch.c  benchmark_batch_improved.c  main.c  page_table.c  page_table.h  parallel_latency_model.c  ssd_baseline.c  ssd_baseline.h  stats.c  stats.h  upmem_swap.c  upmem_swap.h  workload.c  workload.h  zram_backend.c  zswap_backend.c
